Test on Java 17